# GameOfLifeClone

./: .gitignore  CMakeLists.txt  README.md
src/: CellGrid.cpp  CellGrid.h  Shader.cpp  Shader.h  main.cpp
src/shader/: fragment.shader
